--- a/index.html
+++ b/index.html
@@ -6,103 +6,7 @@
   <title>Global Economic Trends Dashboard</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f9fa;
-      color: #333;
-      display: flex;
-    }
-    header {
-      background-color: #1a1a2e;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      position: fixed;
-      top: 0;
-      z-index: 1000;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      font-weight: 500;
-    }
-    main {
-      display: flex;
-      margin-top: 80px;
-      flex: 1;
-    }
-    #map {
-      width: 70%;
-      height: calc(100vh - 80px);
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    }
-    .sidebar {
-      width: 30%;
-      background-color: #fff;
-      padding: 20px;
-      box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
-    }
-    .sidebar h2 {
-      margin-top: 0;
-      color: #1a1a2e;
-    }
-    .indicator {
-      margin-bottom: 15px;
-    }
-    .indicator label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: 500;
-    }
-    .indicator select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 14px;
-    }
-    .country {
-      fill: #e0e0e0;
-      stroke: #ccc;
-      stroke-width: 0.5px;
-      transition: fill 0.3s ease;
-    }
-    .country:hover {
-      fill: #4edcff;
-      cursor: pointer;
-    }
-    .tooltip {
-      position: absolute;
-      background-color: rgba(0, 0, 0, 0.85);
-      color: #fff;
-      padding: 8px 12px;
-      border-radius: 6px;
-      pointer-events: none;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      font-size: 14px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-    footer {
-      text-align: center;
-      padding: 10px 0;
-      color: #666;
-      font-size: 12px;
-      background-color: #f8f9fa;
-      border-top: 1px solid #e0e0e0;
-      width: 100%;
-      position: fixed;
-      bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -139,9 +43,12 @@
     </div>
   </main>
   <div id="tooltip" class="tooltip"></div>
+  <div id="plotly-chart"></div>
   <footer>
     Data provided by World GeoJSON project. Map visualization powered by D3.js.
   </footer>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
