Add navigation bar to index.html
Added a navigation bar to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 </head>
 <body class="bg-gray-100 text-[#051923]">
 
+    <nav class="bg-[#003554] text-white py-4 shadow-lg">
+        <div class="container mx-auto max-w-5xl px-4 md:px-8 flex justify-between items-center">
+            <h1 class="text-2xl font-bold">Global Economy</h1>
+            <div class="space-x-6">
+                <a href="index.html" class="hover:text-[#0582CA] transition duration-200">Home</a>
+                <a href="predict.html" class="hover:text-[#0582CA] transition duration-200">GDP Prediction</a>
+            </div>
+        </div>
+    </nav>
+
     <main class="container mx-auto max-w-5xl p-4 md:p-8">
 
         <header class="text-center mb-12 mt-4">
