updated the nav links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div class="space-x-6">
                 <a href="index.html" class="hover:text-[#0582CA] transition duration-200">Home</a>
                 <a href="predict.html" class="hover:text-[#0582CA] transition duration-200">GDP Prediction</a>
+                <a href="visual.html" class="hover:text-[#0582CA] transition duration-200">Visual</a>
+                <a href="Untitled-1.html" class="hover:text-[#0582CA] transition duration-200">Chatbot GDP</a>
             </div>
         </div>
     </nav>
